fix(twitch): Make text on offline screen readable (#228)
* Update offline colors

* Bump version

* Swap accents

--- a/styles/twitch/catppuccin.user.css
+++ b/styles/twitch/catppuccin.user.css
@@ -2,7 +2,7 @@
 @name           Twitch Catppuccin
 @namespace      github.com/catppuccin/userstyles/styles/twitch
 @homepageURL    https://github.com/catppuccin/userstyles/tree/main/styles/twitch
-@version        1.1.7
+@version        1.1.8
 @description    Soothing pastel theme for Twitch
 @author         Catppuccin
 @updateURL      https://github.com/catppuccin/userstyles/raw/main/styles/twitch/catppuccin.user.css
@@ -219,6 +219,16 @@
     div[data-test-selector="seekbar-interaction-area__interactionArea"]
       span[data-test-selector="seekbar-segment__segment"][style*="background-color: rgba(255, 255, 255, 0.85);"] {
       background: @overlay2 !important;
+    }
+
+    /* Recent VOD title */
+
+    div.player-overlay-background h4 {
+      color: @subtext0 !important;
+    }
+
+    a.offline-recommendations-video-card p {
+      color: @text;
     }
 
     /* TODO: moments */
